# Mini-Cinema

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/chung/: chung.cpp  chung.h
src/nhap/: nhap.cpp  nhap.h
src/xuat/: xuat.cpp  xuat.h
